tests/positive/arg_inline.rms
INLINE @"\["
GROUP(
    GROUP(
        ANY(
            INLINE @"hello",
            @"THERE"
        )
    )
)