tests/negative/repeat.rms

REPEAT(5,
    ANY(
        @"cat",
        repeat(
            1,
            @"hello",
            VARCHAR("aad", 1)
        ),
        any(
            @"cat",
            @"dog
        )
    )
)
